# sfml-game-engine

./: CMakeLists.txt  README.md
Includes/: AnimationComponent.hpp  Background.hpp  Camera.hpp  Engine.hpp  Entity.hpp  Game.hpp  Ground.hpp  InputComponent.hpp  PhysicsComponent.hpp  Player.hpp  Scenery.hpp  VideoComponent.hpp  World.hpp  utils.hpp
Includes/Audio/: AudioComponent.hpp
Includes/Entity/: AnimationComponent.hpp  Animations.hpp  Entity.hpp  PhysicsComponent.hpp  Player.hpp  RenderComponent.cpp  RenderComponent.hpp
Includes/Entity/Player/: ActionsComponent.cpp  ActionsComponent.hpp  AnimationComponent.hpp  AnimationManager.hpp  CombatComponent.cpp  CombatComponent.hpp  InputComponent.hpp  MovementComponent.hpp  PhysicsComponent.hpp  Player.hpp  PlayerSprite.hpp  RenderComponent.cpp  RenderComponent.hpp  RenderManager.cpp  RenderManager.hpp  StateManager.hpp
Includes/Entity/Player/States/: Attacking.hpp  Braking.hpp  Concentrating.hpp  Idle.cpp  Idle.hpp  Jumping.cpp  Jumping.hpp  PlayerState.hpp  Running.cpp  Running.hpp  State.hpp  StateManager.hpp  StateSet.hpp  States.hpp  Stopping.cpp  Stopping.hpp  Walking.cpp  Walking.hpp  Winking.hpp
Includes/Entity/Scenery/: Background.hpp  Ground.hpp  Scenery.hpp
Includes/EntityManager/: EntityManager.hpp
Includes/EntityManager/Entity/: Entity.hpp
Includes/EntityManager/Entity/Body/: Body.hpp  VitalityComponent.hpp
Includes/EntityManager/Entity/Components/: ColliderComponent.hpp  PhysicsComponent.hpp  RenderComponent.hpp
Includes/EntityManager/Entity/Effects/: Effect.hpp
Includes/EventHandling/: Controls.hpp  EventHandler.hpp  EventSubscriber.hpp  InputHandler.hpp
Includes/Game/: AudioComponent.hpp  Camera.hpp  EventHandler.hpp  Game.hpp  PhysicsEngine.hpp  TextureComponent.hpp  TimeComponent.hpp  VideoComponent.hpp
Includes/Game/Components/Audio/: AudioComponent.hpp
Includes/Game/Components/Time/: TimeComponent.hpp
Includes/Game/Components/Video/: Camera.hpp  TextureComponent.hpp  VideoComponent.hpp
Includes/Game/Engines/: AnimationEngine.hpp  PhysicsEngine.hpp  StateMachine.hpp  StateMachineEngine.cpp  StateMachineEngine.hpp
Includes/Game/Engines/AnimationEngine/: Animatable.hpp  Animation.hpp  AnimationEngine.hpp  AnimationSheet.hpp
Includes/Game/Engines/EventHandling/: EventHandler.hpp  EventSubscriber.hpp  InputBindings.hpp  InputHandler.hpp
Includes/Game/Engines/Render/: AnimatedComposite.hpp  Composite.hpp  Render.hpp
Includes/Game/Engines/SceneGraph/: AnimatedSprite.hpp  Colorable.hpp  Composite.hpp  ParallaxLayer.cpp  ParallaxLayer.hpp  RectangleShape.hpp  Render.hpp  Sprite.hpp
Includes/Game/Engines/StateMachine/: Evaluable.hpp  Evaluation.hpp  State.hpp  StateBase.hpp  StateBase_new.hpp  StateHandle.hpp  StateMachine.hpp  StateMachineContext.hpp  StateMachine_new.hpp  StateSetBase.hpp  State_new.hpp
Includes/Game/World/: World.hpp
Includes/Game/World/Entity/: Entity.hpp
Includes/Identification/: Identities.hpp  Maps.hpp  Streamable.hpp  StrongType.hpp
Includes/Physics/: MotionEquation.hpp  PhysicalEnvironment.hpp
Includes/Player/: Player.hpp
Includes/Scene/: Scene.cpp  Scene.hpp
Includes/Scenery/: Background.hpp  Ground.hpp  Scenery.hpp
Includes/StateMachine/: StateMachine.hpp
Includes/StateMachine/Actor/: Actor.hpp
Includes/StateMachine/Cores/: Core.hpp  DynamicCore.hpp
Includes/StateMachine/Evaluations/: Combo.hpp  Conditioned.hpp  Evaluation.hpp  InputDriven.hpp
Includes/StateMachine/NPC/: NPC.hpp
Includes/StateMachine/States/: Animated.hpp  Domain.hpp  DynamicState.hpp  State.hpp
Includes/Time/: TimeComponent.hpp
Includes/Utils/: EnumSet.hpp  customTypes.hpp  logger.hpp  utils.hpp
Includes/Video/: Camera.hpp  TextureComponent.hpp  VideoComponent.hpp
Includes/Video/Animation/: Animatable.hpp  Animation.hpp  AnimationEngine.hpp  AnimationSheet.hpp
Includes/Video/SceneGraph/: AnimatedSprite.hpp  Colorable.hpp  Composite.hpp  HitMap.hpp  ParallaxLayer.hpp  RectangleShape.hpp  Sprite.hpp
Includes/World/: World.hpp
Setup/: setup.bat
Src/: AnimationComponent.cpp  Background.cpp  Camera.cpp  Engine.cpp  Entity.cpp  Game.cpp  Ground.cpp  InputComponent.cpp  PhysicsComponent.cpp  Player.cpp  Scenery.cpp  TimeComponent.cpp  VideoComponent.cpp  World.cpp  main.cpp
Src/Audio/: AudioComponent.cpp
Src/Entity/: AnimationComponent.cpp  Animations.cpp  Entity.cpp  InputComponent.cpp  PhysicsComponent.cpp  Player.cpp  RenderComponent.cpp
Src/Entity/Player/: ActionsComponent.cpp  AnimationComponent.cpp  AnimationManager.cpp  CombatComponent.cpp  InputComponent.cpp  MovementComponent.cpp  PhysicsComponent.cpp  Player.cpp  PlayerSprite.cpp  RenderManager.cpp  StateManager.cpp
Src/Entity/Player/States/: Attacking.cpp  Braking.cpp  Idle.cpp  (+8 more)
Src/Entity/Scenery/: Background.cpp  Ground.cpp  Scenery.cpp
Src/EntityManager/: EntityManager.cpp
Src/EntityManager/Entity/: Entity.cpp
Src/EventHandling/: Controls.cpp  EventHandler.cpp  EventSubscriber.cpp  InputHandler.cpp
Src/Game/: AudioComponent.cpp  Camera.cpp  EventHandler.cpp  Game.cpp  PhysicsEngine.cpp  TimeComponent.cpp  VideoComponent.cpp
Src/Game/Engines/: AnimationEngine.cpp  PhysicsEngine.cpp  StateMachineEngine.cpp
Src/Game/World/: World.cpp
Src/Identification/: Streamable.cpp
Src/Physics/: MotionEquation.cpp  PhysicalEnvironment.cpp
Src/Player/: Player.cpp
Src/Scenery/: Background.cpp  Ground.cpp  Scenery.cpp
Src/StateMachine/: StateMachine.cpp
Src/StateMachine/Actor/: Actor.cpp
Src/StateMachine/Cores/: Core.cpp
Src/StateMachine/Evaluations/: Combo.cpp  Conditioned.cpp  InputDriven.cpp
Src/StateMachine/NPC/: NPC.cpp
Src/StateMachine/States/: State.cpp
Src/Time/: TimeComponent.cpp
Src/Video/: Camera.cpp  VideoComponent.cpp
Src/Video/SceneGraph/: Composite.cpp  HitMap.cpp  ParallaxLayer.cpp  RectangleShape.cpp  Sprite.cpp
Src/World/: World.cpp
Utils/: EnumSet.hpp  customTypes.hpp  logger.hpp  math.hpp  text.hpp  utils.cpp  utils.hpp
src/: AnimationComponent.cpp  Background.cpp  Camera.cpp  InputComponent.cpp  PhysicsComponent.cpp  Player.cpp  main.cpp
(+104 files in other folders)
